# exercise

WellsFargo/activity_1/: LICENSE  README.md  pyproject.toml
WellsFargo/activity_1/src/swigmatrixwf/: matrix.cpp  matrix.h  matrix.i  matrix.py  matrix_wrap.cxx  setup.py
WellsFargo/activity_2/: CMakeLists.txt  README.md  comparer_builder.cpp  comparer_builder.h
