[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swigmatrixwf"
version = "0.0.9"
authors = [
  { name="Ye Gao" },
]
description = "A matrix class in Python realized in C++ via SWIG"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
